# rc-racing-files

src/src/bno_imu/: CMakeLists.txt  package.xml
src/src/bno_imu/src/: imu.py  imu_calibration.py
src/src/data_collector/: CMakeLists.txt  package.xml
src/src/data_collector/launch/: datacollection.launch  deploy.launch  sac.launch  single_run.launch  single_run_2.launch  vae_ddqn.launch  vae_ddqn_bwdiff.launch
src/src/ir_lap_detector/: CMakeLists.txt  package.xml
src/src/ir_lap_detector/src/: ir.py
src/src/raspicam_node/src/: RaspiCamControl.cpp  raspicam_node.cpp
src/src/rc_receiver/: CMakeLists.txt  package.xml
src/src/rc_receiver/src/: rc_receiver.py
src/src/wheel_encoder/: CMakeLists.txt  package.xml
src/src/wheel_encoder/src/: wheel_encoder.py  wheel_encoder_experimental.py  wheel_encoder_orig.py
